# waddy-py

./: .gitignore  Dockerfile  pyproject.toml
app/: ai.py  main.py
