[tool.poetry]
name = "waddy-api-prototype"
version = "0.1.0"
description = "Waddy Open AI Prototype"
authors = ["Aaron Chen <dev.kst.aaron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^1.54.1"
python-dotenv = "^1.0.1"
nanoid = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
